--- a/public/index.html
+++ b/public/index.html
@@ -3,37 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat App</title>
+    <title>Chat App with Rooms</title>
 </head>
 <body>
-    <h1>
-        this is a chat application
-    </h1>
+    <h1>This is a chat application with rooms</h1>
+
+    <input type="text" id="room" placeholder="Enter room name">
+    <button id="join-room-button">Join Room</button>
 
     <div id="div"></div>
 
     <input type="text" id="message" placeholder="Enter your message">
-    <button id="send-button"> send </button>
-        <script src="/socket.io/socket.io.js"></script>
+    <button id="send-button">Send</button>
 
-        <script>
-            const socket = io();
-            const sendBtn = document.getElementById('send-button');
-            const messageInput = document.getElementById('message');
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        const socket = io();
+        const sendBtn = document.getElementById('send-button');
+        const joinRoomBtn = document.getElementById('join-room-button');
+        const messageInput = document.getElementById('message');
+        const roomInput = document.getElementById('room');
 
-            socket.on('message', (message) => {
-                const div = document.getElementById('div');
-                const p = document.createElement('p');
-                p.innerText = message;
-                div.appendChild(p);
-            })
+        let currentRoom = '';
 
-            sendBtn.addEventListener('click', () => {
-                const message = messageInput.value;
-                console.log(message);
-                socket.emit('message', message);
-            })
+        // Join a specific room
+        joinRoomBtn.addEventListener('click', () => {
+            const room = roomInput.value.trim();
+            if (room) {
+                socket.emit('joinRoom', room);
+                currentRoom = room;
+                console.log(`Joined room: ${room}`);
+            }
+        });
 
-        </script>
+        // Listen for messages from the server
+        socket.on('message', (message) => {
+            const div = document.getElementById('div');
+            const p = document.createElement('p');
+            p.innerText = message;
+            div.appendChild(p);
+        });
+
+        // Send a message to the current room
+        sendBtn.addEventListener('click', () => {
+            const message = messageInput.value.trim();
+            if (message && currentRoom) {
+                socket.emit('message', { room: currentRoom, message });
+                messageInput.value = ''; // Clear input
+            }
+        });
+    </script>
 </body>
 </html>
